Closed Bug 10424 Opened 26 years ago Closed 26 years ago

If not typed the last "/", the page is not loaded (redirects not being followed)

Categories

(Core :: Networking, defect, P2)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: teruko, Assigned: rpotts)

References

()

Details

If you type "http://home.netscape.com/ja" instead of "http://home.netscape.com/ja/" in the URL
location bar, the page is not loaded.

Step of reproduce
1. Launch Apprunner
2. type "http://home.netscape.com"   this page is loaded correctly.
3. add "/ja"  after "http://home.netscape.com"
This page is not loaded correctly even though in the Dos Prompt console, the message "http://home.netscape.com/ja is
loaded correctly" shows.

If you type "http://home.netscape.com/ja/", the page is loaded correctly.

I tested "http://home.netscape.com/fr" "http://home.netscape.com/zh/cn", and "http://home.netscape.com/zh/tw"
I got the same results as when I type "http://home.netscape.com/ja".

Tested 7-21-16-NECKO Win32 build.  This does not happen in 7-22-08-M9 Win32 build.
Priority: P3 → P2
Summary: If not typed the last "/", the page is not loaded → If not typed the last "/", the page is not loaded
Target Milestone: M9
Status: NEW → ASSIGNED
This is a redirect issue. I will look into it (cc'ing Rick if he wants to
volunteer :)
Summary: If not typed the last "/", the page is not loaded → If not typed the last "/", the page is not loaded (redirects not being followed)
Blocks: 10730
Assignee: gagan → rpotts
Status: ASSIGNED → NEW
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
If the server did not send an entity along with the 302 status code necko would
not handle the redirect.

This should work now :-)
-- rick
*** Bug 10851 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
this works with 7/31 builds, marking verified
Bulk move of all Necko (to be deleted component) bugs to new Networking

component.
You need to log in before you can comment on or make changes to this bug.