bug #10424  URL redirects.  If the server did *not* send an entity along with the 302, necko would not correctly follow the redirect.